完善本地运行方案

--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,17 @@
 #
 # APPLICATION
 #
-APP_NAME=app-name
+APP_NAME=dobo
 APP_SCHEMA=http
 APP_HOST=localhost
-APP_PORT=serverport
+APP_PORT=8083
 # serverenv = development OR production
-APP_ENV=serverenv
+APP_ENV=development
 
 #
 # JWT
 #
-MySigningKey=Use_a_strong_and_long_random_key
+MySigningKey=734771963
 # expires token in hours
 JWTExpireTime=2
 
@@ -19,9 +19,9 @@ JWTExpireTime=2
 # BDD
 #
 # Supported dbDriver: mysql, postgres, sqlite3
-DBDRIVER=dbDriver
+DBDRIVER=sqlite3
 DBUSER=dbUser
 DBPASS=dbPass
-DBNAME=dbName
+DBNAME=./database.db
 DBHOST=localhost
 DBPORT=dbport
